# numerical_analysis

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: .directory  FunctionUtils_8hpp.html  FunctionUtils_8hpp__dep__incl.map  FunctionUtils_8hpp__dep__incl.md5  FunctionUtils_8hpp__incl.map  FunctionUtils_8hpp__incl.md5  FunctionUtils_8hpp_source.html  Optimizer_8hpp.html  Optimizer_8hpp__dep__incl.map  Optimizer_8hpp__dep__incl.md5  Optimizer_8hpp__incl.map  Optimizer_8hpp__incl.md5  Optimizer_8hpp_source.html  README_8md.html  README_8md_source.html  VolumousObject_8hpp.html  VolumousObject_8hpp__dep__incl.map  VolumousObject_8hpp__dep__incl.md5  VolumousObject_8hpp__incl.map  VolumousObject_8hpp__incl.md5  VolumousObject_8hpp_source.html  annotated.html  classFunctionUtils.html  classFunctionUtils__coll__graph.map  classFunctionUtils__coll__graph.md5  classOptimizer.html  classOptimizer__coll__graph.map  classOptimizer__coll__graph.md5  classOptimizer_a17bdb6fc4aa978eea62a3f1ec4216cdc_cgraph.map  classOptimizer_a17bdb6fc4aa978eea62a3f1ec4216cdc_cgraph.md5  classOptimizer_a17bdb6fc4aa978eea62a3f1ec4216cdc_icgraph.map  classOptimizer_a17bdb6fc4aa978eea62a3f1ec4216cdc_icgraph.md5  classOptimizer_a183a038337eabc19367932a690ec5c29_cgraph.map  classOptimizer_a183a038337eabc19367932a690ec5c29_cgraph.md5  classOptimizer_a44bb366370b96cf611eec59a8a13a3fa_cgraph.map  classOptimizer_a44bb366370b96cf611eec59a8a13a3fa_cgraph.md5  classOptimizer_a48102c1770d4d8856a78315888022faf_cgraph.md5  classOptimizer_a53809959cd6de1b78487eae4cde76601_icgraph.map  (+69 more)
include/: Optimizer.hpp  (+2 more)
(+86 files in other folders)
